[gd_scene load_steps=2 format=2]

[ext_resource path="res://widgets/feature-camera-2d.gd" type="Script" id=1]

[node name="FeatureCamera2D" type="Camera2D"]
current = true
process_mode = 0
position_smoothing_speed = 1.0
drag_left_margin = 0.0
drag_right_margin = 0.1
script = ExtResource( 1 )

[node name="DramaticTimer" type="Timer" parent="."]
wait_time = 0.33
one_shot = true

[node name="DramaticTween" type="Tween" parent="."]

[node name="TargetTween" type="Tween" parent="."]

[node name="TargetAheadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LimitsTween" type="Tween" parent="."]
